# metagenomics-skill

./: .dockerignore  .gitignore  ASSESSMENT-2026-06-10.md  BENCHMARKING-DATASETS.md  CO-SCIENTIST-DIRECTION.md  DATASETS.md  DB-BUILD-PLAN.md  Dockerfile  EVALUATION-2026-06-22.md  LEARNING.md  Makefile  README.md  ROADMAP.md  SKILL.md  conda-lock.yml  environment.yml  mcp_server.py  pyproject.toml  samples.example.tsv  setup.sh
.github/workflows/: ci.yml
config/: config.example.yaml  cross_platform.manifest.tsv
containers/: README.md
docs/: ARCHITECTURE-WIRING.md  DESIGN-multidomain-and-db-scaling.md  VALIDATION.md  spec-probe.md
docs/history/: CRITIQUE.md  README.md
metagx/: __init__.py  advise.py  catalog.py  cli.py  compare.py  config_builder.py  consent.py  dbbuild.py  dbfetch.py  dbprovision.py  differential.py  diversity.py  doctor.py  evidence_pack.py  formats.py  history.py  paper.py  plan.py  probe.py  project.py  readfilter.py  refresh.py  registry.py  report.py  runner.py  scaffold.py  schedulers.py  subsample.py  sync_help.py  taxid_tag.py  tool_advisor.py  toollock.py  validation.py  wiring.py
metagx/evidence/: README.md  __init__.py  bracken_read_length.yaml  cutadapt_amplicon.yaml  kaiju_consensus.yaml  kraken2_confidence.yaml  kraken2_secondary.yaml  metaphlan_consensus.yaml  metaspades_memory.yaml  phylogenetics_iqtree.yaml  phylogenetics_mafft.yaml  (+2 more)
prompts/: INTERVIEW.md
scripts/: compare_platforms.py  compare_technologies.py  install_bio_macos_arm64.sh  lock-env.sh  render_pdf.py  run_all_tests.sh  run_platform_assemblies.sh  simulate_illumina_wgsim.sh  simulate_pacbio.sh
tests/: test_adna_e2e.py  test_advisor.py  test_aggregate_args.py  test_ci_env_parity.py  test_classifier_consensus.py  test_cli_validate.py  test_config_builder.py  test_cross_sample_tsv.py  test_damage.py  test_dbbuild.py  test_dbbuild_config.py  test_dbfetch.py  test_dbprovision.py  test_decontam.py  test_differential.py  test_diversity.py  test_doctor.py  test_doctor_active_tools.py  test_env_file.py  test_formats_subsample_readfilter.py  test_functional_amr.py  test_interview_prompt.py  test_minimizer_report.py  test_packaging.py  test_paper.py  test_phylogenetics.py  test_pipeline_e2e.py  test_plan.py  test_pr1_cli_and_inputs.py  test_probe.py  test_probe_degradation.py  test_project.py  test_read_contig_accuracy.py  test_reconcile.py  test_refresh.py  test_registry.py  test_runner_jobs.py  test_runner_preflight.py  test_sample_template.py  test_scaffold.py  (+15 more)
workflow/: Snakefile
(+470 files in other folders)
