[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metagx"
version = "0.1.0"
description = "Schema-driven, multi-client metagenomics pipeline (kraken2/Bracken/fastp + optional assembly)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "snakemake>=8.10.0",
]

[project.optional-dependencies]
# Needed only to serve the MCP / HTTP surfaces.
serve = [
    "mcp[cli]>=1.2.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]
test = [
    "pytest>=8.0",
    "numpy>=1.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
metagx = "metagx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["metagx"]

# Ship the data that lives outside the metagx/ package source so a real
# (non-editable) `pip install metagx` works outside the repo. Without this the
# Snakemake workflow + MCP server are missing from the wheel and runner.run()
# raises FileNotFoundError. The workflow lands under metagx/workflow/ so
# runner.workflow_path() resolves it inside the installed package.
# parameters/, presets/, evidence/ live inside metagx/ and are carried by the
# package automatically. Only the data outside the package needs force-include.
[tool.hatch.build.targets.wheel.force-include]
"workflow" = "metagx/workflow"
"mcp_server.py" = "metagx/mcp_server.py"
"environment.yml" = "metagx/environment.yml"
